Добавление ссылки на успеваемость

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@ stranica
 </head>
 <body>
 Дубанов Вадим Валентинович ИСт-202
+<p></p>
+<a href="yspewaemost.html">Успеваемость</a>
 </body>
 </html>
