--- a/yspewaemost.html
+++ b/yspewaemost.html
@@ -5,8 +5,8 @@
 <title>Dubanov</title>
 </head>
 <body>
-<h3 style="padding-left: 210px;>Успеваемость</h3>
-<h4 style="padding-left: 210px;>20T063</h4>
+<h3 style="padding-left: 210px;">Успеваемость</h3>
+<h4 style="padding-left: 200px;">20T063</h4>
 <p>&nbsp;</p>
 <table style="height: 252px; width: 500px;">
 <thread>
