--- a/yspewaemost.html
+++ b/yspewaemost.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+<Link rel="stylesheet" href="style.css" type="text/css"/>
 <meta charset="UTF-8">
 <title>Dubanov</title>
 </head>
