--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<Link rel="stylesheet" href="still.css" type="text/css"/>
 <meta charset= "UTF-8">
 <title>
 stranica
@@ -10,5 +11,6 @@ stranica
 Дубанов Вадим Валентинович ИСт-202
 <p></p>
 <a href="yspewaemost.html">Успеваемость</a>
+<footer><a href="https://portal.kuzstu.ru/learning/progress/current/report/cp3?student_post_id=1182444">Текущая успеваемость</a></footer>
 </body>
 </html>
